--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="bg-white rounded-lg shadow-md">
           <img alt="Logo design for a chic boutique with elegant and soft color tones"
-              src="https://placehold.co/600x400/f5f5f5/cccccc/image2.jpg" class="rounded-t-lg"/>
+              src="loge.png" class="rounded-t-lg"/>
           <div class="p-4">
             <p class="text-lg font-semibold text-pink-500">Boutique Logo Design</p>
             <p class="text-gray-600 mt-2">An elegant logo design for a chic boutique, using soft colors to appeal to a
