`Updated index.html to change language to Arabic and translate content`

--- a/index.html
+++ b/index.html
@@ -1,86 +1,98 @@
-<div class="justify-between items-center mx-auto flex flex-wrap max-w-screen-xl">
-    <a href="/eVgunQZdWdXRN2rb9wSN#" class="items-center flex">
-      <img alt="Company Logo" src="https://placehold.co/36x36" class="h-9 mr-3"/>
-      <span class="text-xl font-semibold text-gray-800 self-center whitespace-nowrap">Company</span>
-    </a>
-    <div class="items-center lg:order-2 flex">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>اعمالنا</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body>
+    <div class="justify-between items-center mx-auto flex flex-wrap max-w-screen-xl">
+        <a href="#" class="items-center flex">
+            <img alt="Company Logo" src="https://placehold.co/36x36" class="h-9 mr-3"/>
+            <span class="text-xl font-semibold text-gray-800 self-center whitespace-nowrap">Company</span>
+        </a>
+        <div class="items-center lg:order-2 flex"></div>
+        <div class="justify-between items-center w-full lg:flex lg:w-auto lg:order-1 hidden">
+            <ul class="mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0 flex flex-col">
+                <li>
+                    <a href="#" class="py-2 pr-4 pl-3 text-gray-800 block rounded hover:bg-pink-200">الصفحة الرئيسية</a>
+                </li>
+                <li>
+                    <a href="#" class="py-2 pr-4 pl-3 text-gray-800 block rounded hover:bg-pink-200">من نحن</a>
+                </li>
+                <li>
+                    <a href="#" class="py-2 pr-4 pl-3 text-gray-800 block rounded hover:bg-pink-200">تواصل معنا</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 
+    <div class="bg-pink-50 min-h-screen">
+        <div class="mx-auto px-4 py-8 container">
+            <header class="text-center mb-8">
+                <p class="text-4xl font-bold text-pink-600">Graphic Design Portfolio</p>
+                <p class="text-gray-500 mt-2">Showcasing designs for shops, schools, kindergartens, and events</p>
+            </header>
+
+            <section class="md:grid-cols-2 lg:grid-cols-3 grid grid-cols-1 gap-8">
+                <div class="bg-white rounded-lg shadow-md">
+                    <img alt="Graphic design for a children's event with vibrant colors and playful elements"
+                         src="https://placehold.co/600x400/f5f5f5/cccccc/image1.jpg" class="rounded-t-lg"/>
+                    <div class="p-4">
+                        <p class="text-lg font-semibold text-pink-500">Children's Event Design</p>
+                        <p class="text-gray-600 mt-2">A vibrant and playful design for a children's event that captures the imagination.</p>
+                    </div>
+                </div>
+
+                <div class="bg-white rounded-lg shadow-md">
+                    <img alt="Logo design for a chic boutique with elegant and soft color tones"
+                         src="loge.png" class="rounded-t-lg"/>
+                    <div class="p-4">
+                        <p class="text-lg font-semibold text-pink-500">Boutique Logo Design</p>
+                        <p class="text-gray-600 mt-2">An elegant logo design for a chic boutique, using soft colors to appeal to a female audience.</p>
+                    </div>
+                </div>
+
+                <div class="bg-white rounded-lg shadow-md">
+                    <img alt="Classroom decoration design for a kindergarten using colorful and cheerful themes"
+                         src="https://placehold.co/600x400/f5f5f5/cccccc/image3.jpg" class="rounded-t-lg"/>
+                    <div class="p-4">
+                        <p class="text-lg font-semibold text-pink-500">Kindergarten Decor</p>
+                        <p class="text-gray-600 mt-2">Creating a lively and engaging environment in kindergartens with cheerful designs.</p>
+                    </div>
+                </div>
+
+                <div class="bg-white rounded-lg shadow-md">
+                    <img alt="Promotional material for a school event featuring educational themes and bright visuals"
+                         src="https://placehold.co/600x400/f5f5f5/cccccc/image4.jpg" class="rounded-t-lg"/>
+                    <div class="p-4">
+                        <p class="text-lg font-semibold text-pink-500">School Event Promotions</p>
+                        <p class="text-gray-600 mt-2">Visuals and themes designed to captivate students and enhance school events.</p>
+                    </div>
+                </div>
+
+                <div class="bg-white rounded-lg shadow-md">
+                    <img alt="Graphic design for a fashion store using modern and trendy elements"
+                         src="https://placehold.co/600x400/f5f5f5/cccccc/image5.jpg" class="rounded-t-lg"/>
+                    <div class="p-4">
+                        <p class="text-lg font-semibold text-pink-500">Fashion Store Artworks</p>
+                        <p class="text-gray-600 mt-2">Trendy and eye-catching designs for fashion stores to attract customers.</p>
+                    </div>
+                </div>
+
+                <div class="bg-white rounded-lg shadow-md">
+                    <img alt="Invitation design for a female-oriented event using pastel colors and elegant typography"
+                         src="https://placehold.co/600x400/f5f5f5/cccccc/image6.jpg" class="rounded-t-lg"/>
+                    <div class="p-4">
+                        <p class="text-lg font-semibold text-pink-500">Event Invitations</p>
+                        <p class="text-gray-600 mt-2">Sophisticated invitations designed especially for female audiences with pastel colors.</p>
+                    </div>
+                </div>
+            </section>
+        </div>
     </div>
-    <div class="justify-between items-center w-full lg:flex lg:w-auto lg:order-1 hidden">
-      <ul class="mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0 flex flex-col">
-        <li>
-          <a href="/eVgunQZdWdXRN2rb9wSN#" class="py-2 pr-4 pl-3 text-gray-800 block rounded hover:bg-pink-200">الصفحة الرئيسية</a>
-        </li>
-        <li>
-          <a href="/eVgunQZdWdXRN2rb9wSN#" class="py-2 pr-4 pl-3 text-gray-800 block rounded hover:bg-pink-200">من نحن</a>
-        </li>
-        <li>
-          <a href="/eVgunQZdWdXRN2rb9wSN#" class="py-2 pr-4 pl-3 text-gray-800 block rounded
-              hover:bg-pink-200">تواصل معنا</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div class="bg-pink-50 min-h-screen">
-    <div class="mx-auto px-4 py-8 container">
-      <header class="text-center mb-8">
-        <p class="text-4xl font-bold text-pink-600">Graphic Design Portfolio</p>
-        <p class="text-gray-500 mt-2">Showcasing designs for shops, schools, kindergartens, and events</p>
-      </header>
-      <section class="md:grid-cols-2 lg:grid-cols-3 grid grid-cols-1 gap-8">
-        <div class="bg-white rounded-lg shadow-md">
-          <img alt="Graphic design for a children's event with vibrant colors and playful elements"
-              src="https://placehold.co/600x400/f5f5f5/cccccc/image1.jpg" class="rounded-t-lg"/>
-          <div class="p-4">
-            <p class="text-lg font-semibold text-pink-500">Children's Event Design</p>
-            <p class="text-gray-600 mt-2">A vibrant and playful design for a children's event that captures the
-                imagination.</p>
-          </div>
-        </div>
-        <div class="bg-white rounded-lg shadow-md">
-          <img alt="Logo design for a chic boutique with elegant and soft color tones"
-              src="loge.png" class="rounded-t-lg"/>
-          <div class="p-4">
-            <p class="text-lg font-semibold text-pink-500">Boutique Logo Design</p>
-            <p class="text-gray-600 mt-2">An elegant logo design for a chic boutique, using soft colors to appeal to a
-                female audience.</p>
-          </div>
-        </div>
-        <div class="bg-white rounded-lg shadow-md">
-          <img alt="Classroom decoration design for a kindergarten using colorful and cheerful themes"
-              src="https://placehold.co/600x400/f5f5f5/cccccc/image3.jpg" class="rounded-t-lg"/>
-          <div class="p-4">
-            <p class="text-lg font-semibold text-pink-500">Kindergarten Decor</p>
-            <p class="text-gray-600 mt-2">Creating a lively and engaging environment in kindergartens with cheerful
-                designs.</p>
-          </div>
-        </div>
-        <div class="bg-white rounded-lg shadow-md">
-          <img alt="Promotional material for a school event featuring educational themes and bright visuals"
-              src="https://placehold.co/600x400/f5f5f5/cccccc/image4.jpg" class="rounded-t-lg"/>
-          <div class="p-4">
-            <p class="text-lg font-semibold text-pink-500">School Event Promotions</p>
-            <p class="text-gray-600 mt-2">Visuals and themes designed to captivate students and enhance school events.</p>
-          </div>
-        </div>
-        <div class="bg-white rounded-lg shadow-md">
-          <img alt="Graphic design for a fashion store using modern and trendy elements"
-              src="https://placehold.co/600x400/f5f5f5/cccccc/image5.jpg" class="rounded-t-lg"/>
-          <div class="p-4">
-            <p class="text-lg font-semibold text-pink-500">Fashion Store Artworks</p>
-            <p class="text-gray-600 mt-2">Trendy and eye-catching designs for fashion stores to attract customers.</p>
-          </div>
-        </div>
-        <div class="bg-white rounded-lg shadow-md">
-          <img alt="Invitation design for a female-oriented event using pastel colors and elegant typography"
-              src="https://placehold.co/600x400/f5f5f5/cccccc/image6.jpg" class="rounded-t-lg"/>
-          <div class="p-4">
-            <p class="text-lg font-semibold text-pink-500">Event Invitations</p>
-            <p class="text-gray-600 mt-2">Sophisticated invitations designed especially for female audiences with pastel
-                colors.</p>
-          </div>
-        </div>
-      </section>
-    </div>
-  </div>
-  <nav class="bg-pink-100 px-4 lg:px-6 py-2.5 border-gray-200"></nav>
+
+    <nav class="bg-pink-100 px-4 lg:px-6 py-2.5 border-gray-200"></nav>
+</body>
+</html>
