--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>اعمالنا</title>
+    <title>محفظة التصميم الجرافيكي</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <div class="justify-between items-center mx-auto flex flex-wrap max-w-screen-xl">
         <a href="#" class="items-center flex">
-            <img alt="Company Logo" src="https://placehold.co/36x36" class="h-9 mr-3"/>
-            <span class="text-xl font-semibold text-gray-800 self-center whitespace-nowrap">Company</span>
+            <img alt="شعار الشركة" src="haha.png" class="h-20 mr-20"/>
+            
         </a>
         <div class="items-center lg:order-2 flex"></div>
         <div class="justify-between items-center w-full lg:flex lg:w-auto lg:order-1 hidden">
@@ -31,62 +31,62 @@
     <div class="bg-pink-50 min-h-screen">
         <div class="mx-auto px-4 py-8 container">
             <header class="text-center mb-8">
-                <p class="text-4xl font-bold text-pink-600">Graphic Design Portfolio</p>
-                <p class="text-gray-500 mt-2">Showcasing designs for shops, schools, kindergartens, and events</p>
+                <p class="text-4xl font-bold text-pink-600">محفظة التصميم الجرافيكي</p>
+                <p class="text-gray-500 mt-2">عرض تصاميم للمحلات، المدارس، رياض الأطفال، والفعاليات</p>
             </header>
 
             <section class="md:grid-cols-2 lg:grid-cols-3 grid grid-cols-1 gap-8">
                 <div class="bg-white rounded-lg shadow-md">
-                    <img alt="Graphic design for a children's event with vibrant colors and playful elements"
+                    <img alt="تصميم جرافيكي لحدث أطفال بألوان نابضة وحيوية"
                          src="https://placehold.co/600x400/f5f5f5/cccccc/image1.jpg" class="rounded-t-lg"/>
                     <div class="p-4">
-                        <p class="text-lg font-semibold text-pink-500">Children's Event Design</p>
-                        <p class="text-gray-600 mt-2">A vibrant and playful design for a children's event that captures the imagination.</p>
+                        <p class="text-lg font-semibold text-pink-500">تصميم حدث للأطفال</p>
+                        <p class="text-gray-600 mt-2">تصميم نابض بالحياة وممتع لحدث خاص بالأطفال يثير الخيال.</p>
                     </div>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-md">
-                    <img alt="Logo design for a chic boutique with elegant and soft color tones"
+                    <img alt="تصميم شعار لمتجر أنيق بألوان ناعمة وجذابة"
                          src="loge.png" class="rounded-t-lg"/>
                     <div class="p-4">
-                        <p class="text-lg font-semibold text-pink-500">Boutique Logo Design</p>
-                        <p class="text-gray-600 mt-2">An elegant logo design for a chic boutique, using soft colors to appeal to a female audience.</p>
+                        <p class="text-lg font-semibold text-pink-500">تصميم شعار للمتجر</p>
+                        <p class="text-gray-600 mt-2">تصميم شعار أنيق لمتجر عصري باستخدام ألوان ناعمة تناسب الجمهور النسائي.</p>
                     </div>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-md">
-                    <img alt="Classroom decoration design for a kindergarten using colorful and cheerful themes"
+                    <img alt="تصميم ديكور صف لرياض الأطفال باستخدام عناصر ملونة ومبهجة"
                          src="https://placehold.co/600x400/f5f5f5/cccccc/image3.jpg" class="rounded-t-lg"/>
                     <div class="p-4">
-                        <p class="text-lg font-semibold text-pink-500">Kindergarten Decor</p>
-                        <p class="text-gray-600 mt-2">Creating a lively and engaging environment in kindergartens with cheerful designs.</p>
+                        <p class="text-lg font-semibold text-pink-500">ديكور رياض الأطفال</p>
+                        <p class="text-gray-600 mt-2">إنشاء بيئة مليئة بالحيوية والجاذبية في رياض الأطفال بتصاميم مبهجة.</p>
                     </div>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-md">
-                    <img alt="Promotional material for a school event featuring educational themes and bright visuals"
+                    <img alt="مواد ترويجية لحدث مدرسي تعرض مواضيع تعليمية ورسومات جذابة"
                          src="https://placehold.co/600x400/f5f5f5/cccccc/image4.jpg" class="rounded-t-lg"/>
                     <div class="p-4">
-                        <p class="text-lg font-semibold text-pink-500">School Event Promotions</p>
-                        <p class="text-gray-600 mt-2">Visuals and themes designed to captivate students and enhance school events.</p>
+                        <p class="text-lg font-semibold text-pink-500">ترويج فعاليات مدرسية</p>
+                        <p class="text-gray-600 mt-2">تصاميم ومواضيع مصممة لجذب الطلاب وتعزيز الفعاليات المدرسية.</p>
                     </div>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-md">
-                    <img alt="Graphic design for a fashion store using modern and trendy elements"
+                    <img alt="تصميم جرافيكي لمتجر أزياء باستخدام عناصر حديثة وعصرية"
                          src="https://placehold.co/600x400/f5f5f5/cccccc/image5.jpg" class="rounded-t-lg"/>
                     <div class="p-4">
-                        <p class="text-lg font-semibold text-pink-500">Fashion Store Artworks</p>
-                        <p class="text-gray-600 mt-2">Trendy and eye-catching designs for fashion stores to attract customers.</p>
+                        <p class="text-lg font-semibold text-pink-500">أعمال فنية لمتجر الأزياء</p>
+                        <p class="text-gray-600 mt-2">تصاميم عصرية وجذابة لمتاجر الأزياء لجذب العملاء.</p>
                     </div>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-md">
-                    <img alt="Invitation design for a female-oriented event using pastel colors and elegant typography"
+                    <img alt="تصميم دعوة لفعالية نسائية باستخدام ألوان باستيل وخطوط أنيقة"
                          src="https://placehold.co/600x400/f5f5f5/cccccc/image6.jpg" class="rounded-t-lg"/>
                     <div class="p-4">
-                        <p class="text-lg font-semibold text-pink-500">Event Invitations</p>
-                        <p class="text-gray-600 mt-2">Sophisticated invitations designed especially for female audiences with pastel colors.</p>
+                        <p class="text-lg font-semibold text-pink-500">دعوات الفعاليات</p>
+                        <p class="text-gray-600 mt-2">دعوات أنيقة مصممة خصيصًا للجمهور النسائي بألوان باستيل.</p>
                     </div>
                 </div>
             </section>
