--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 
                 <div class="bg-white rounded-lg shadow-md">
                     <img alt="تصميم ديكور صف لرياض الأطفال باستخدام عناصر ملونة ومبهجة"
-                         src="https://placehold.co/600x400/f5f5f5/cccccc/image3.jpg" class="rounded-t-lg"/>
+                         src="Untitled design (14).png" class="rounded-t-lg"/>
                     <div class="p-4">
-                        <p class="text-lg font-semibold text-pink-500">ديكور رياض الأطفال</p>
+                        <p class="text-lg font-semibold text-pink-500">بطقات اعمال</p>
                         <p class="text-gray-600 mt-2">إنشاء بيئة مليئة بالحيوية والجاذبية في رياض الأطفال بتصاميم مبهجة.</p>
                     </div>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-md">
                     <img alt="مواد ترويجية لحدث مدرسي تعرض مواضيع تعليمية ورسومات جذابة"
-                         src="https://placehold.co/600x400/f5f5f5/cccccc/image4.jpg" class="rounded-t-lg"/>
+                         src="2.png" class="rounded-t-lg"/>
                     <div class="p-4">
                         <p class="text-lg font-semibold text-pink-500">ترويج فعاليات مدرسية</p>
                         <p class="text-gray-600 mt-2">تصاميم ومواضيع مصممة لجذب الطلاب وتعزيز الفعاليات المدرسية.</p>
