--- a/index.html
+++ b/index.html
@@ -89,6 +89,16 @@
                         <p class="text-lg font-semibold text-pink-500">دعوات الفعاليات</p>
                         <p class="text-gray-600 mt-2">دعوات أنيقة مصممة خصيصًا للجمهور النسائي بألوان باستيل.</p>
                     </div>
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4558826685808696"
+     crossorigin="anonymous"></script>
+<!-- test -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-4558826685808696"
+     data-ad-slot="2496038534"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                 </div>
             </section>
         </div>
