--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-4558826685808696">
     <title>محفظة التصميم الجرافيكي</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -38,7 +39,7 @@
             <section class="md:grid-cols-2 lg:grid-cols-3 grid grid-cols-1 gap-8">
                 <div class="bg-white rounded-lg shadow-md">
                     <img alt="تصميم جرافيكي لحدث أطفال بألوان نابضة وحيوية"
-                         src="https://placehold.co/600x400/f5f5f5/cccccc/image1.jpg" class="rounded-t-lg"/>
+                         src="3.jpeg" class="rounded-t-lg"/>
                     <div class="p-4">
                         <p class="text-lg font-semibold text-pink-500">تصميم حدث للأطفال</p>
                         <p class="text-gray-600 mt-2">تصميم نابض بالحياة وممتع لحدث خاص بالأطفال يثير الخيال.</p>
@@ -47,16 +48,16 @@
 
                 <div class="bg-white rounded-lg shadow-md">
                     <img alt="تصميم شعار لمتجر أنيق بألوان ناعمة وجذابة"
-                         src="loge.png" class="rounded-t-lg"/>
+                         src="Untitled design (14).png" class="rounded-t-lg"/>
                     <div class="p-4">
                         <p class="text-lg font-semibold text-pink-500">تصميم شعار للمتجر</p>
-                        <p class="text-gray-600 mt-2">تصميم شعار أنيق لمتجر عصري باستخدام ألوان ناعمة تناسب الجمهور النسائي.</p>
+                        <p class="text-gray-600 mt-2">تصميم شعار أنيق لمتجر عصري باستخدام ألوان ناعمة .</p>
                     </div>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-md">
                     <img alt="تصميم ديكور صف لرياض الأطفال باستخدام عناصر ملونة ومبهجة"
-                         src="Untitled design (14).png" class="rounded-t-lg"/>
+                         src="business_card.jpg" class="rounded-t-lg"/>
                     <div class="p-4">
                         <p class="text-lg font-semibold text-pink-500">بطقات اعمال</p>
                         <p class="text-gray-600 mt-2">إنشاء بيئة مليئة بالحيوية والجاذبية في رياض الأطفال بتصاميم مبهجة.</p>
@@ -65,7 +66,7 @@
 
                 <div class="bg-white rounded-lg shadow-md">
                     <img alt="مواد ترويجية لحدث مدرسي تعرض مواضيع تعليمية ورسومات جذابة"
-                         src="2.png" class="rounded-t-lg"/>
+                         src="Second_Project_Mock_up.jpg" class="rounded-t-lg"/>
                     <div class="p-4">
                         <p class="text-lg font-semibold text-pink-500">ترويج فعاليات مدرسية</p>
                         <p class="text-gray-600 mt-2">تصاميم ومواضيع مصممة لجذب الطلاب وتعزيز الفعاليات المدرسية.</p>
@@ -88,6 +89,16 @@
                         <p class="text-lg font-semibold text-pink-500">دعوات الفعاليات</p>
                         <p class="text-gray-600 mt-2">دعوات أنيقة مصممة خصيصًا للجمهور النسائي بألوان باستيل.</p>
                     </div>
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4558826685808696"
+     crossorigin="anonymous"></script>
+<!-- test -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-4558826685808696"
+     data-ad-slot="2496038534"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                 </div>
             </section>
         </div>
