--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                 <div class="bg-white rounded-lg shadow-md">
                     <img alt="تصميم شعار لمتجر أنيق بألوان ناعمة وجذابة"
-                         src="Untitled design (14).png" class="rounded-t-lg"/>
+                         src="21w.png" class="rounded-t-lg"/>
                     <div class="p-4">
                         <p class="text-lg font-semibold text-pink-500">تصميم شعار للمتجر</p>
                         <p class="text-gray-600 mt-2">تصميم شعار أنيق لمتجر عصري باستخدام ألوان ناعمة .</p>
